<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, GitHubAppActivity!</string>
    <string name="app_name">GitHub App</string>
	<string name="UserName">User Name</string>
	<string name="Password">Password</string>
	<string name="Login">Login</string>
	<string name="menuLogOut">Log Out</string>
	<string name="menuOrganisation">Organisation</string>
	<string name="menuUser">Repository</string>
	
	<string name="MemberTeam">Member Team</string>
	<string name="OrganisationMember">Organisation Member</string>
	<string name="Organisation">Organisation</string>
	<string name="Repository">Repository</string>
	<string name="Branch">Branch</string>
	<string name="Commit">Commits</string>
	
	<string name="SearchCommitByUser">Search by User </string>
	<string name="SelectUser">User</string>
	<string name="DatePicker">Date Picker</string>
	<string name="Ok">OK</string>
	
	
	<string name="Name">Name:</string>
	<string name="Date">Date :</string>
	<string name="Message">Message :</string>
</resources>