<?xml version="1.0" encoding="utf-8"?>
<!--  
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FFFFFF" >
    
    android:layout_toRightOf="@id/Name"
    
    #43BFC7
    -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#FFFFFF"
    android:orientation="vertical" >

   <TextView
         android:id="@+id/header"
        android:layout_width="fill_parent"
        android:layout_height="55dp"
        android:background="@drawable/image1"        
         />
         
    <TextView
        android:id="@+id/searchCommitByUser"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:text="@string/SearchCommitByUser"
        android:textColor="#FFFFFF"
        android:textSize="20dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/userName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/header"
        android:paddingTop="15dp"
        android:text="@string/Name"
        android:textColor="#000000" >
    </TextView>

    <Spinner
        android:id="@+id/spinnerUserCommits"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/header"
        android:layout_marginRight="10dp"
        android:prompt="@string/SelectUser" />

    <TextView
        android:id="@+id/userCommitDate"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/userName"
        android:layout_marginTop="10dp"
        android:paddingTop="30dp"
        android:text="@string/Date"
        android:textColor="#000000" />

    <!-- 
    <TextView
        android:id="@+id/userDate"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/userName"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="45dp"
        android:paddingTop="10dp"
        android:text="@string/Date"
        android:textColor="#000000" />
   
	<Button
        android:id="@+id/datePickerButton"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/userCommitDate"
        android:layout_alignBottom="@+id/userCommitDate"
        android:layout_alignRight="@+id/spinnerUserCommits"
        android:text="@string/DatePicker" /> -->
  
      <TextView
        android:id="@+id/userDate"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/userName"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="45dp"
        android:paddingTop="10dp"
        android:textColor="#000000"
         />
            
    <DatePicker
        android:id="@+id/datePickerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:layout_marginTop="70dp"
        android:layout_marginLeft="45dp"
        android:layout_below="@+id/userName"
        android:onClick="onDateSelectedButtonClick"
        />

    <Button
        android:id="@+id/okButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/datePickerButton"
        android:layout_marginTop="38dp"
        android:text="@string/Ok" />

</RelativeLayout>